fix nav shadow and grid overlap in wide screen

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ ul {
   color: #333;
   background: #fff;
   padding: 10px;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.54);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 #logo {
@@ -184,6 +184,7 @@ aside hr {
   position: absolute;
   top: 0;
   left: auto;
+  margin-top: 15px;
 }
 
 .grid {
